--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0064FF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Express Groomer - Easily get all your pets groomed"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Basic SPA</title>
+
+    <!-- Async load fonts: Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+      media="print"
+      onload='this.media="all"'
+    />
+
+    <title>Express Groomer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
