add form inputs including a working date-picker
- Select Pet
- Select Service
- Select Date (3rd-party library date-picker)

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
       onload='this.media="all"'
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+
     <title>Express Groomer</title>
   </head>
   <body>
